--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "node ./backend/server.js",
+    "dev:only": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "lint": "eslint */**/*.{js,ts,tsx} --fix"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "express": "^4.17.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
@@ -23,6 +25,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.13.0",
+    "js-base64": "^3.6.1",
+    "pinyin": "^2.10.2",
     "prettier": "^2.3.2",
     "sass": "^1.35.2",
     "typescript": "^4.3.2",
