--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@better-scroll/pull-up": "^2.4.1",
     "@better-scroll/slide": "^2.4.1",
     "axios": "^0.21.1",
+    "create-keyframe-animation": "^0.1.0",
     "express": "^4.17.1",
     "good-storage": "^1.1.1",
     "lyric-parser": "^1.0.1",
