feat: 排行页面、搜索页面开发

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "good-storage": "^1.1.1",
     "lyric-parser": "^1.0.1",
+    "throttle-debounce": "^3.0.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
     "vue3-lazy": "^1.0.0-alpha.1",
@@ -26,6 +27,7 @@
     "@types/good-storage": "^1.1.0",
     "@types/lyric-parser": "^1.0.2",
     "@types/node": "^16.3.1",
+    "@types/throttle-debounce": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "@vitejs/plugin-legacy": "^1.4.3",
